tests/invalid/Assign_Invalid_8.whiley
function f(int x) -> int:
    x = false
    return 1
